--- a/test.css
+++ b/test.css
@@ -19,9 +19,12 @@ canvas {
 
 p {
   color: rgba(255,255,255,.3);
-  font-weight: bold;
   font-family: "Helvectica Neue", arial, sans-serif;
   text-align: center;
   margin: 0;
   margin: 10px 0 0 0;
+}
+
+p strong {
+  color: rgba(255,255,255,.8);
 }
